fixed alignment issue of drawer button and title

--- a/public/css/drawer.css
+++ b/public/css/drawer.css
@@ -1,3 +1,8 @@
+.mdc-toolbar__section {
+  display: flex;
+  align-items: center;
+}
+
 .menu-button,
 .drawer .material-icons {
   text-decoration: none;
